add project clusters update
