# api_docs.yml
@@ -1472,6 +1472,13 @@ paths:
                             type: string
                         is_multicluster:
                             type: boolean
+                        project_clusters:
+                            type: array
+                            items:
+                                type: object
+                                properties:
+                                    cluster_id:
+                                        type: string
             responses:
                 200:
                     description: "Success"
